File name change

--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -54,16 +54,16 @@
 - name: Oracle JDK | Install Script
   ansible.builtin.template:
     src: template/source.sh.j2
-    dest: "{{ ansible_facts.user_dir }}/jdk.env.sh"
+    dest: "{{ ansible_facts.user_dir }}/.jdk.env.sh"
     mode: "0700"
 
 - name: Dotfiles | Ensure config alias is set in ~/.bashrc and ~/.zshrc
   ansible.builtin.lineinfile:
     path: "{{ item }}"
-    line: 'source {{ ansible_facts.user_dir }}/jdk.env.sh'
+    line: 'source {{ ansible_facts.user_dir }}/.jdk.env.sh'
     create: true
     state: present
-    regexp: '^source {{ ansible_facts.user_dir }}/jdk.env.sh$'
+    regexp: '^source {{ ansible_facts.user_dir }}/.jdk.env.sh$'
     mode: "0700"
   loop:
     - "{{ ansible_facts.user_dir }}/.bashrc"
