gradle dynamic version

--- a/.github/workflows/ansible_molecule.yml
+++ b/.github/workflows/ansible_molecule.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -38,6 +39,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -58,6 +60,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -78,6 +81,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -98,6 +102,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -118,6 +123,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -138,6 +144,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -158,6 +165,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -178,6 +186,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -198,6 +207,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -218,6 +228,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -238,6 +249,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -258,6 +270,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -278,6 +291,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -298,6 +312,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -318,6 +333,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -338,6 +354,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -358,6 +375,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -378,6 +396,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
@@ -398,6 +417,7 @@ jobs:
         uses: actions/setup-python@v4.3.1
         with:
           python-version: "3.11"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |+
