--- a/molecule/role.java.default/verify.yml
+++ b/molecule/role.java.default/verify.yml
@@ -42,6 +42,21 @@
         success_msg: Apache Maven {{ java_rv_jdk_mvn_version }} is installed
         fail_msg: Apache Maven {{ java_rv_jdk_mvn_version }} is not installed, Shell result {{ java_rv_jdk_maven_tmp_version_shell_result.stdout }}
 
+    - name: Oracle JDK | Gradle | Molecule | Get Dynamic Version
+      when: java_rv_jdk_gradle_version is not defined
+      block:
+        - name: Oracle JDK | Gradle | Molecule | Get Latest Release from github
+          ansible.builtin.uri:
+            url: "https://api.github.com/repos/gradle/gradle/releases/latest"
+            return_content: true
+            headers:
+              Accept: "application/vnd.github.v3+json"
+          register: java_rv_gradle_latest_release_from_github
+
+        - name: Oracle JDK | Gradle | Molecule | Set Dynamic Version
+          ansible.builtin.set_fact:
+            java_rv_jdk_gradle_version: "{{ java_rv_gradle_latest_release_from_github.json.name }}"
+
     - name: Oracle JDK | Gradle | Molecule | Verify | Get Gradle version from shell
       ansible.builtin.command: gradle -version
       environment:
