--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@
 #
 ansible==8.3.0
     # via -r requirements-dev.in
-ansible-compat==4.1.5
+ansible-compat==4.1.6
     # via
     #   ansible-lint
     #   molecule
@@ -32,7 +32,7 @@ cffi==1.15.1
     # via cryptography
 charset-normalizer==3.2.0
     # via requests
-click==8.1.6
+click==8.1.7
     # via
     #   black
     #   click-help-colors
@@ -72,7 +72,7 @@ markupsafe==2.1.3
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
-molecule==6.0.0
+molecule==6.0.1
     # via
     #   -r requirements-dev.in
     #   molecule-plugins
@@ -114,6 +114,7 @@ referencing==0.30.2
     #   jsonschema-specifications
 requests==2.31.0
     # via
+    #   -r requirements-dev.in
     #   ansible-lint
     #   docker
     #   molecule-plugins
