--- a/roles/java/defaults/main.yml
+++ b/roles/java/defaults/main.yml
@@ -6,7 +6,7 @@ java_rv_jdk_mvn_install_path: "{{ ansible_facts.user_dir }}/.local/share/maven"
 java_rv_jdk_mvn_version: 3.9.4
 
 java_rv_jdk_gradle_install_path: "{{ ansible_facts.user_dir }}/.local/share/gradle"
-java_rv_jdk_gradle_version: 8.2
+# java_rv_jdk_gradle_version: 8.2
 
 java_rv_jdk_tmp_dir: "{{ ansible_facts.user_dir }}/.tmp/java"
 
