--- a/.github/workflows/ansible_molecule.yml
+++ b/.github/workflows/ansible_molecule.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f requirements.yml ]; then ansible-galaxy install -r requirements.yml; fi
 
       - name: ansible lint
@@ -33,10 +33,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -44,7 +44,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -54,10 +54,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -65,7 +65,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -75,10 +75,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -86,7 +86,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -96,10 +96,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -107,7 +107,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -117,10 +117,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -128,7 +128,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -138,10 +138,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -149,7 +149,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -159,10 +159,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -170,7 +170,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -180,10 +180,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -191,7 +191,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -201,10 +201,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -212,7 +212,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -222,10 +222,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -233,7 +233,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -243,10 +243,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -254,7 +254,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -264,10 +264,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -275,7 +275,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -285,10 +285,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -296,7 +296,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -306,10 +306,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -317,7 +317,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -327,10 +327,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -338,7 +338,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -348,10 +348,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -359,7 +359,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -369,10 +369,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -380,7 +380,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -390,10 +390,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -401,7 +401,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
@@ -411,10 +411,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Setup Python
-        uses: actions/setup-python@v4.3.1
+        uses: actions/setup-python@v4.7.0
         with:
           python-version: "3.11"
           cache: 'pip'
@@ -422,7 +422,7 @@ jobs:
       - name: Install dependencies
         run: |+
           python -m pip install --upgrade pip wheel setuptools
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Molecule Test
         run: |+
