--- a/roles/terraform/tasks/main.yml
+++ b/roles/terraform/tasks/main.yml
@@ -19,7 +19,7 @@
       register: rv_terraform_release_from_github
 
     - name: Terrafrom | Set releases
-      set_fact:
+      ansible.builtin.set_fact:
         rv_terraform_version: "{{ rv_terraform_release_from_github.json.tag_name[1:] }}"
 
 - name: Terraform | Get downloaded file stat
