--- a/molecule/role.java.default/verify.yml
+++ b/molecule/role.java.default/verify.yml
@@ -25,6 +25,21 @@
         success_msg: Java Version {{ java_rv_jdk_version }} is installed
         fail_msg: Java Version {{ java_rv_jdk_version }} is not installed, Shell result {{ java_rv_jdk_tmp_version_shell_result.stdout }}
 
+    - name: Oracle JDK | Apache Maven | Molecule | Get Dynamic Version
+      when: java_rv_jdk_mvn_version is not defined
+      block:
+        - name: Oracle JDK | Apache Maven | Molecule | Get Latest Release from github
+          ansible.builtin.uri:
+            url: "https://api.github.com/repos/apache/maven/releases/latest"
+            return_content: true
+            headers:
+              Accept: "application/vnd.github.v3+json"
+          register: java_rv_mvn_latest_release_from_github
+
+        - name: Oracle JDK | Apache Maven | Molecule | Set Dynamic Version
+          ansible.builtin.set_fact:
+            java_rv_jdk_mvn_version: "{{ java_rv_mvn_latest_release_from_github.json.name }}"
+
     - name: Oracle JDK | Apache Maven | Molecule | Verify | Get mvn version from shell
       ansible.builtin.command: mvn --version
       environment:
