--- a/roles/java/defaults/main.yml
+++ b/roles/java/defaults/main.yml
@@ -3,7 +3,7 @@ java_rv_jdk_install_path: "{{ ansible_facts.user_dir }}/.local/share/java"
 java_rv_jdk_version: 17
 
 java_rv_jdk_mvn_install_path: "{{ ansible_facts.user_dir }}/.local/share/maven"
-java_rv_jdk_mvn_version: 3.9.4
+# java_rv_jdk_mvn_version: 3.9.4
 
 java_rv_jdk_gradle_install_path: "{{ ansible_facts.user_dir }}/.local/share/gradle"
 # java_rv_jdk_gradle_version: 8.2
